--- a/src/AlignCop.Analyzers/AlignCop.Analyzers.csproj
+++ b/src/AlignCop.Analyzers/AlignCop.Analyzers.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
 
     <!-- Avoid ID conflicts with the package project. -->
