--- a/src/AlignCop.Analyzers.CodeFixes/AlignCop.Analyzers.CodeFixes.csproj
+++ b/src/AlignCop.Analyzers.CodeFixes/AlignCop.Analyzers.CodeFixes.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <TargetFrameworks>net8.0;netstandard2.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <RootNamespace>AlignCop.Analyzers</RootNamespace>
   </PropertyGroup>
