--- a/tests/AlignCop.Analyzers.Tests/AlignCop.Analyzers.Tests.csproj
+++ b/tests/AlignCop.Analyzers.Tests/AlignCop.Analyzers.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
 
+    <NoWarn>$(NoWarn);CA1000;CA1034</NoWarn>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
