--- a/src/AlignCop.Analyzers.CodeFixes/AlignCop.Analyzers.CodeFixes.csproj
+++ b/src/AlignCop.Analyzers.CodeFixes/AlignCop.Analyzers.CodeFixes.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net8.0;netstandard2.0</TargetFrameworks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsPackable>false</IsPackable>
     <RootNamespace>AlignCop.Analyzers</RootNamespace>
   </PropertyGroup>
