--- a/src/AlignCop.Analyzers/AlignCop.Analyzers.csproj
+++ b/src/AlignCop.Analyzers/AlignCop.Analyzers.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net8.0;netstandard2.0</TargetFrameworks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsPackable>false</IsPackable>
 
     <!-- Avoid ID conflicts with the package project. -->
