Configure debug symbols

--- a/src/AlignCop.Analyzers.CodeFixes/AlignCop.Analyzers.CodeFixes.csproj
+++ b/src/AlignCop.Analyzers.CodeFixes/AlignCop.Analyzers.CodeFixes.csproj
@@ -5,6 +5,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsPackable>false</IsPackable>
     <RootNamespace>AlignCop.Analyzers</RootNamespace>
+
+    <DebugSymbols>True</DebugSymbols>
+    <DebugType>Embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
