--- a/src/AlignCop.Analyzers/AlignCop.Analyzers.csproj
+++ b/src/AlignCop.Analyzers/AlignCop.Analyzers.csproj
@@ -7,6 +7,9 @@
 
     <!-- Avoid ID conflicts with the package project. -->
     <PackageId>*$(MSBuildProjectFile)*</PackageId>
+
+    <DebugSymbols>True</DebugSymbols>
+    <DebugType>Embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
